meja/tests/if-then-error.stderr
File "tests/if-then-error.meja", line 2, characters 14-17:
Error: Incompatable types unit and int:
       Cannot unify unit and int
